--- a/edc-gear-starter/react-app/src/components/PostDetail/PostDetail.css
+++ b/edc-gear-starter/react-app/src/components/PostDetail/PostDetail.css
@@ -50,7 +50,7 @@
 
 
 .right-post-div {
-    max-width: 100px;
+    max-width: 300px;
     padding: 5px 14px;
     padding-bottom: 0;
 }
@@ -172,7 +172,7 @@ textarea.post-detail-textarea {
 }
 #each-comment-content-inner {
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     padding: 0 7px;
     max-width: 290px;
 
@@ -185,7 +185,6 @@ textarea.post-detail-textarea {
     padding-left: 5px;
     margin: 0;
     word-break: break-all;
-
 }
 
 
